FPRL-241: Add integration for ccd-case-docs
+ Refactored tests to handle new ccd-case-docs
+ Upgrade dependencies to fix vulnerabilities